@@ -1,5 +1,5 @@
 .\" Manual page created by Tomasz Kojm, 20020415
-.TH "freshclam" "1" "November 11, 2003" "Tomasz Kojm" "Clam AntiVirus"
+.TH "freshclam" "1" "February 20, 2004" "Tomasz Kojm" "Clam AntiVirus"
 .SH "NAME"
 .LP 
 freshclam \- update virus databases
@@ -11,7 +11,7 @@ freshclam [options]
 freshclam updates the virus database. It's a part of the Clam AntiVirus package. It requires an Internet connection.
 .SH "OPTIONS"
 .LP 
-
+Freshclam reads its configuration from freshclam.conf. The settings will be overwritten with command line options.
 .TP 
 \fB\-h, \-\-help\fR
 Output help information and exit.
@@ -31,11 +31,8 @@ Write all messages to the standard output (stdout), instead of the standard erro
 \fB\-l FILE, \-\-log=FILE\fR
 Save download report in FILE.
 .TP 
-\fB\-\-log\-verbose\fR
-Save additional information (mostly needless) to the report file.
-.TP 
 \fB\-\-datadir=DIRECTORY\fR
-Install downloaded database in DIRECTORY. The directory must be writeable for the 'clamav' user or unprivileged user running freshclam.
+Install new database in DIRECTORY. The directory must be writeable for the 'clamav' user or unprivileged user running freshclam.
 .TP 
 \fB\-u USER, \-\-user USER\fR
 Run as USER. By default (when started by root) freshclam drops privileges and works as the 'clamav' user.
@@ -44,13 +41,7 @@ Run as USER. By default (when started by root) freshclam drops privileges and wo
 Run in a daemon mode. This option requires \-\-checks.
 .TP 
 \fB\-c #n, \-\-checks=#n\fR
-Check #n times pet day for new database. #n must be between 1 and 50.
-.TP 
-\fB\-\-http\-proxy=hostname[:port]\fR
-Connect via a proxy server.
-.TP 
-\fB\-\-proxy\-user=user:password\fR
-Do proxy authorization for user. Password is required.
+Check #n times day for new database. #n must be between 1 and 50.
 .TP 
 \fB\-\-daemon\-notify=/path/to/clamav.conf\fR
 Notify the daemon about the new database. By default it reads a hardcoded config file but you can use an another one. Both local and TCP sockets are supported.
@@ -101,4 +92,4 @@ Please check the full documentation for credits.
 Tomasz Kojm <tk@clamav.net>
 .SH "SEE ALSO"
 .LP 
-clamd(8), clamdscan(1), clamscan(1), sigtool(1), clamav.conf(5), clamav\-milter(8)
+clamd(8), clamdscan(1), clamscan(1), sigtool(1), clamav.conf(5)
